# uml-ai-tool

./: .gitattributes  .gitignore  BACKEND.txt  COMANDOS.TXT  EXPORTERS.TXT  FRONTEND.txt  README.md  atributos.json  backend.json  clase_completa.json  clases.json  crear_estructura.py  estructura.txt  generar_backend.py  init_exporter.py  metodo.json  pyproject.toml  relation.json  requirements.txt
backend/: .env.example  alembic.ini  arquitectura  comandos  requirements.txt  zcomandos.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0443cea4eed8_init_schema.py  4767e1a61bd0_init_schema.py  61a6d08dd909_init_schema.py  (+6 more)
backend/app/: db.py  main.py
backend/data/: attributes.csv  classes.csv  relations.csv  users.csv
backend/exports/: 9148472c-2972-44ef-ab49-46b785c1ad9c.json
backend/scripts/: load_csv_sa.py
backend/seeds/: load_csv_sa.py
exporters/generators/: json_to_full_orm.py  json_to_orm.py  json_to_relations.py  orm_to_crud.py  postman_generator.py  project_builder.py  uml_to_json.py
exporters/json/: diagram_166f8cf2-31fd-4f4d-b91b-f7037db4187e.json  diagram_367493a5-e490-4665-a73f-8626674b2ee2.json  diagram_bd5f6952-4ebb-4ae9-8e85-4b8548b3d51d.json
exporters/templates/: application.properties.j2  controller.java.j2  dto.java.j2  model.java.j2  pom.xml.j2  repository.java.j2  service.java.j2
exporters/tests/: test_generators.py  test_validator.py
frontend/: .env  estructura.txt  package.json  requirements.txt
frontend/src/: App.jsx  config.js
z/: atributos.json  clases.json  metodo.json  relation.json
(+156 files in other folders)
