[tool.poetry]
name = "uml-ai-tool-backend"
version = "0.1.0"
description = "Backend y generadores UML"
readme = "README.md"
authors = ["Tu Nombre <tu@email.com>"]
packages = [
    { include = "backend/app" },
    { include = "exporters" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
pydantic = "^2.7.0"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
black = "^24.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
